sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:10: error: not found: value abs
    pos1 = abs(getCouleurJoueur(mem,0)-mem)
           ^NaiveBaseball:11: error: not found: value abs
    pos2 = abs(getCouleurJoueur(mem,1)-mem)
           ^